--- a/style/style.css
+++ b/style/style.css
@@ -153,14 +153,15 @@ span > a {color: #ffc107 !important;}
     margin: 10px 0 0 48.3%;
 }
 
-#video
-{
-    border: 1px dotted orange;
-}
-
 .your_img
 {
     border: 1px solid #ffc107;
     padding: 5px;
     margin: 10px 0 10px 0;
+}
+
+.filter
+{
+    width: 100px;
+    height: 100px;
 }
