--- a/style/style.css
+++ b/style/style.css
@@ -102,6 +102,7 @@ span > a {color: #ffc107 !important;}
 
 .comment
 {
+    word-wrap: break-word;
     border: 2px solid #040300;
     padding: 10px;
     background-color: #141414;
@@ -206,3 +207,21 @@ input:focus:invalid + span
 {
     display: inline;
 }
+
+.valid
+{
+    border-color: #56c93f;
+    -webkit-box-shadow: 0 0 5px 0 rgba(86, 201, 63, 0.75);
+    -moz-box-shadow: 0 0 5px 0 rgba(86, 201, 63, 0.75);
+    box-shadow: 0 0 5px 0 rgba(86, 201, 63, 0.75);
+}
+
+.invalid
+{
+    border-color: #FF0000!important;
+    -webkit-box-shadow: 0 0 5px 0 rgba(195, 0, 0, 0.75)!important;
+    -moz-box-shadow: 0 0 5px 0 rgba(195, 0, 0, 0.75)!important;
+    box-shadow: 0 0 5px 0 rgba(195, 0, 0, 0.75)!important;
+}
+
+#picture{border: none; box-shadow: none;}
