made possible to use multiple filters at once, added drag and drop to select position of filters

--- a/style/style.css
+++ b/style/style.css
@@ -237,6 +237,10 @@ input:focus:invalid + span
 {
     cursor: pointer;
     position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
 }
 
 #video
