--- a/style/style.css
+++ b/style/style.css
@@ -267,7 +267,7 @@ p {color: #AAAAAA;}
 
 .rmv-img {color: #ffc107;}
 
-.item {margin: 0px;}
+.item {margin: 0;}
 
 .form-info
 {
@@ -394,3 +394,38 @@ input:focus:invalid + span {display: inline;}
     border: 1px solid black;
     border-top: 0;
 }
+
+input[type='file'] {color: transparent;}
+
+.inputfile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.file-lab {
+    font-size: 1.25em;
+    font-weight: 700;
+    color: #EEEEEE;
+    display: inline-block;
+    border: 1px solid #808080;
+    background-color: #1e2125;
+    padding: 5px 20px 5px 20px;
+    -webkit-box-shadow: 0 0 1px 0 rgba(140, 140, 140, 0.75);
+    -moz-box-shadow: 0 0 1px 0 rgba(140, 140, 140, 0.75);
+    box-shadow: 0 0 1px 0 rgba(140, 140, 140, 0.75);
+}
+
+#loader
+{
+    display: none;
+    position: absolute;
+    bottom: 0;
+    left: 46.5%;
+    padding: 10px;
+}
+
+#gallery-wrapper {padding-bottom: 25px;}
