--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,14 @@
 body {background-color: #0e0e0e;/*#070708;#1e2125;*/}
 
-@media (max-height: 875px){
+html {min-width: 450px; min-height: 250px;}
 
-    footer {display: none;}
+@media (max-width: 875px)
+{
+    .wrapper {width: 100%; max-width: 100%!important; margin-left: 0; margin-right: 0;}
+    .main-glorify {width: 75%!important; max-width: 75%!important; min-width: 75%!important;}
+    .your-pictures {width: 25%!important; max-width: 25%!important; min-width: 25%!important;}
+    .register-form-wrapper {width: 100%!important; max-width: 100%!important; margin-left: 0;}
+    .register-form {width: 100%!important; max-width: 100%!important; margin-left: 0;}
 }
 
 .navbar
@@ -45,7 +51,6 @@ footer
     bottom: 0;
     width: 100%;
     height: 60px;
-    line-height: 60px;
     background-color: #1e2125;
     border: 1px solid black;
     border-bottom: none;
@@ -84,6 +89,8 @@ p {color: #AAAAAA;}
 }
 
 .btn-sign-in {width: 100%;}
+
+.btn {min-width: 60px;}
 
 #startbutton {
     background-color: #ffc107;
@@ -132,6 +139,7 @@ p {color: #AAAAAA;}
 
 .gallery-img-wrapper
 {
+    word-break: break-all;
     background-color: #0c0c0c;
     -webkit-box-shadow: 0 0 5px 0 rgba(4, 3, 0, 0.75);
     -moz-box-shadow: 0 0 5px 0 rgba(4, 3, 0, 0.75);
@@ -165,6 +173,7 @@ p {color: #AAAAAA;}
     text-align: center;
 }
 .overlay {
+    overflow: hidden;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -276,9 +285,9 @@ p {color: #AAAAAA;}
     display: none;
 }
 
-/*input:focus {border-color: #DDDDDD;}*/
-
 input:focus:valid, input:valid {border-color: #56c93f;}
+
+.currpw:focus:valid, .currpw:valid {border-color: #80bdff;}
 
 input:focus:invalid + span {display: inline;}
 
@@ -371,18 +380,13 @@ input:focus:invalid + span {display: inline;}
 
 .container-filters
 {
+    height: auto;
     background-color: #191919;
     border: 1px solid black;
     margin-bottom: 15px;
     -webkit-box-shadow: inset 0 0 5px 1px rgba(4, 3, 0, 0.75);
     -moz-box-shadow: inset 0 0 5px 1px rgba(4, 3, 0, 0.75);
     box-shadow: inset 0 0 5px 1px rgba(4, 3, 0, 0.75);
-}
-
-.filter-row
-{
-    max-height: 90px;
-    justify-content: center;
 }
 
 .polaroid
@@ -424,8 +428,52 @@ input[type='file'] {color: transparent;}
     display: none;
     position: absolute;
     bottom: 0;
-    left: 46.5%;
+    left: 0;
+    text-align: center;
+    width: 100%;
     padding: 10px;
 }
 
 #gallery-wrapper {padding-bottom: 25px;}
+
+.fa-user {color: #ffc107;}
+
+.fa-user:hover, .fa-user:active {color: #EEEEEE;}
+
+.dropdown-content
+{
+    text-align: center;
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #1e2125;
+    -webkit-box-shadow: 0 0 5px 0 rgba(4, 3, 0, 0.75);
+    -moz-box-shadow: 0 0 5px 0 rgba(4, 3, 0, 0.75);
+    box-shadow: 0 0 5px 0 rgba(4, 3, 0, 0.75);
+    border: 1px solid black;
+    min-width: 170px;
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.navbar-toggler:hover .dropdown-content, .navbar-toggler:active .dropdown-content {
+    display: block;
+}
+
+.navbar-toggler {
+    background-color: #1e2125;
+    position: relative;
+    display: inline-block;
+}
+
+.lab-dropdown
+{
+    margin: 0;
+    padding: 0;
+}
+
+.form-dropdown
+{
+    margin-top: -10px;
+    margin-bottom: -5px;
+}
